`chore: Update localization messages for filters`

--- a/locales/EnglishUS.json
+++ b/locales/EnglishUS.json
@@ -48,7 +48,7 @@
 			},
 			"messages": {
 				"disabled": "**24/7 mode has been disabled**",
-				"enabled": "**24/7 mode has been enabled. The bot will not leave the voice channel even if there are no people in the voice channel.**"
+				"enabled": "**24/7 mode has been `ENABLED`. \nThe bot will not leave the voice channel even if there are no people in the voice channel.**"
 			}
 		},
 		"dj": {
@@ -113,43 +113,43 @@
 		"8d": {
 			"description": "on/off 8d filter",
 			"messages": {
-				"filter_enabled": "8D filter has been enabled.",
-				"filter_disabled": "8D filter has been disabled."
+				"filter_enabled": "`✅` | 8D filter has been `ENABLED`.",
+				"filter_disabled": "`✅` | 8D filter has been `DISABLED`."
 			}
 		},
 		"bassboost": {
 			"description": "on/off bassboost filter",
 			"messages": {
-				"filter_enabled": "Bassboost filter has been enabled. **Be careful, listening too loudly can damage your hearing!**",
-				"filter_disabled": "Bassboost filter has been disabled."
+				"filter_enabled": "`✅` | Bassboost filter has been `ENABLED`. **Be careful, listening too loudly can damage your hearing!**",
+				"filter_disabled": "`✅` | Bassboost filter has been `DISABLED`."
 			}
 		},
 		"distorsion": {
 			"description": "Toggle the distorsion filter on/off",
 			"messages": {
-				"filter_enabled": "Distorsion filter has been enabled.",
-				"filter_disabled": "Distorsion filter has been disabled."
+				"filter_enabled": "`✅` | Distorsion filter has been `ENABLED`.",
+				"filter_disabled": "`✅` | Distorsion filter has been `DISABLED`."
 			}
 		},
 		"karaoke": {
 			"description": "Toggle the karaoke filter on/off",
 			"messages": {
-				"filter_enabled": "Karaoke filter has been enabled.",
-				"filter_disabled": "Karaoke filter has been disabled."
+				"filter_enabled": "`✅` | Karaoke filter has been `ENABLED`.",
+				"filter_disabled": "`✅` | Karaoke filter has been `DISABLED`."
 			}
 		},
 		"lowpass": {
 			"description": "Toggle the lowpass filter on/off",
 			"messages": {
-				"filter_enabled": "Lowpass filter has been enabled.",
-				"filter_disabled": "Lowpass filter has been disabled."
+				"filter_enabled": "`✅` | Lowpass filter has been `ENABLED`.",
+				"filter_disabled": "`✅` | Lowpass filter has been `DISABLED`."
 			}
 		},
 		"nightcore": {
 			"description": "Toggle the nightcore filter on/off",
 			"messages": {
-				"filter_enabled": "Nightcore filter has been enabled.",
-				"filter_disabled": "Nightcore filter has been disabled."
+				"filter_enabled": "`✅` | Nightcore filter has been `ENABLED`.",
+				"filter_disabled": "`✅` | Nightcore filter has been `DISABLED`."
 			}
 		},
 		"pitch": {
@@ -161,7 +161,7 @@
 				"invalid_number": "Please provide a valid number between 0.5 and 5."
 			},
 			"messages": {
-				"pitch_set": "Pitch has been set to {pitch}."
+				"pitch_set": "`✅` | Pitch has been set to {pitch}."
 			}
 		},
 		"rate": {
@@ -173,20 +173,20 @@
 				"invalid_number": "Please provide a valid number between 0.5 and 5."
 			},
 			"messages": {
-				"rate_set": "Rate has been set to {rate}."
+				"rate_set": "`✅` | Rate has been set to {rate}."
 			}
 		},
 		"reset": {
 			"description": "Resets the active filters",
 			"messages": {
-				"filters_reset": "Filters have been reset."
+				"filters_reset": "`✅` | Filters have been reset."
 			}
 		},
 		"rotation": {
 			"description": "Toggle the rotation filter on/off",
 			"messages": {
-				"enabled": "Rotation filter has been enabled.",
-				"disabled": "Rotation filter has been disabled."
+				"enabled": "`✅` | Rotation filter has been `ENABLED`.",
+				"disabled": "`✅` | Rotation filter has been `DISABLED`."
 			}
 		},
 		"speed": {
@@ -196,29 +196,29 @@
 			},
 			"messages": {
 				"invalid_number": "Please provide a valid number between 0.5 and 5.",
-				"set_speed": "Speed has been set to {speed}."
+				"set_speed": "`✅` | Speed has been set to {speed}."
 			}
 		},
 		"tremolo": {
 			"description": "Toggle the tremolo filter on/off",
 			"messages": {
-				"enabled": "Tremolo filter has been enabled.",
-				"disabled": "Tremolo filter has been disabled."
+				"enabled": "`✅` | Tremolo filter has been `ENABLED`.",
+				"disabled": "`✅` | Tremolo filter has been `DISABLED`."
 			}
 		},
 		"vibrato": {
 			"description": "Toggle the vibrato filter on/off",
 			"messages": {
-				"enabled": "Vibrato filter has been enabled.",
-				"disabled": "Vibrato filter has been disabled."
+				"enabled": "`✅` | Vibrato filter has been `ENABLED`.",
+				"disabled": "`✅` | Vibrato filter has been `DISABLED`."
 			}
 		},
 
 		"autoplay": {
 			"description": "Toggles autoplay",
 			"messages": {
-				"enabled": "Autoplay has been enabled.",
-				"disabled": "Autoplay has been disabled."
+				"enabled": "`✅` | Autoplay has been `ENABLED`.",
+				"disabled": "`✅` | Autoplay has been `DISABLED`."
 			}
 		},
 		"clearqueue": {
