--- a/locales/EnglishUS.json
+++ b/locales/EnglishUS.json
@@ -47,8 +47,8 @@
 				"generic": "An error occurred while trying to execute this command."
 			},
 			"messages": {
-				"disabled": "**24/7 mode has been disabled**",
-				"enabled": "**24/7 mode has been `ENABLED`. \nThe bot will not leave the voice channel even if there are no people in the voice channel.**"
+				"disabled": "`✅` | 24/7 mode has been `DISABLED`",
+				"enabled": "`✅` | 24/7 mode has been `ENABLED`. \n**The bot will not leave the voice channel even if there are no people in the voice channel.**"
 			}
 		},
 		"dj": {
@@ -120,7 +120,7 @@
 		"bassboost": {
 			"description": "on/off bassboost filter",
 			"messages": {
-				"filter_enabled": "`✅` | Bassboost filter has been `ENABLED`. **Be careful, listening too loudly can damage your hearing!**",
+				"filter_enabled": "`✅` | Bassboost filter has been `ENABLED`. \n**Be careful, listening too loudly can damage your hearing!**",
 				"filter_disabled": "`✅` | Bassboost filter has been `DISABLED`."
 			}
 		},
@@ -161,7 +161,7 @@
 				"invalid_number": "Please provide a valid number between 0.5 and 5."
 			},
 			"messages": {
-				"pitch_set": "`✅` | Pitch has been set to {pitch}."
+				"pitch_set": "`✅` | Pitch has been set to **{pitch}**."
 			}
 		},
 		"rate": {
@@ -173,7 +173,7 @@
 				"invalid_number": "Please provide a valid number between 0.5 and 5."
 			},
 			"messages": {
-				"rate_set": "`✅` | Rate has been set to {rate}."
+				"rate_set": "`✅` | Rate has been set to **{rate}**."
 			}
 		},
 		"reset": {
@@ -196,7 +196,7 @@
 			},
 			"messages": {
 				"invalid_number": "Please provide a valid number between 0.5 and 5.",
-				"set_speed": "`✅` | Speed has been set to {speed}."
+				"set_speed": "`✅` | Speed has been set to **{speed}**."
 			}
 		},
 		"tremolo": {
@@ -291,9 +291,9 @@
 		},
 		"queue": {
 			"description": "Shows the current queue",
-			"now_playing": "Now playing: [{title}]({uri}) - Requested By: {requester} - Duration: {duration}",
+			"now_playing": "Now playing: [{title}]({uri}) - Requested By: <@{requester}> - Duration: `{duration}`",
 			"live": "LIVE",
-			"track_info": "{index}. [{title}]({uri}) - Requested By: {requester} - Duration: {duration}",
+			"track_info": "{index}. [{title}]({uri}) - Requested By: <@{requester}> - Duration: `{duration}`",
 			"title": "Queue",
 			"page_info": "Page {index} of {total}"
 		},
@@ -349,10 +349,10 @@
 			"errors": {
 				"invalid_format": "Invalid time format. Examples: seek 1m, seek 1h 30m",
 				"not_seekable": "This track is not seekable.",
-				"beyond_duration": "Cannot seek beyond the song duration of {{length}}."
+				"beyond_duration": "Cannot seek beyond the song duration of {length}."
 			},
 			"messages": {
-				"seeked_to": "Seeked to {{duration}}"
+				"seeked_to": "Seeked to {duration}"
 			}
 		},
 		"shuffle": {
