--- a/locales/German.json
+++ b/locales/German.json
@@ -483,10 +483,14 @@
 			}
 		},
 		"language": {
-			"description": "cmd.language.description",
+			"description": "Legt die Sprache für den Bot fest",
+			"invalid_language": "Bitte gib eine gültige Sprache an. Beispiel: `EnglishUS` für Englisch (Vereinigte Staaten)\n\nDie Liste der unterstützten Sprachen findest du [hier](https://discord.com/developers/docs/reference#locales)\n\n**Verfügbare Sprachen:**\n{languages}",
+			"already_set": "Die Sprache ist bereits auf `{language}` gesetzt",
+			"set": "`✅` | Die Sprache wurde auf `{language}` gesetzt",
 			"options": {
-				"set": "cmd.language.options.set",
-				"reset": "cmd.language.options.reset"
+				"set": "Legt die Sprache für den Bot fest",
+				"language": "Die Sprache, die du einstellen möchtest",
+				"reset": "Ändere die Sprache zurück zur Standardsprache"
 			}
 		}
 	},
